# live-anchor-app

./: .env  PROJECT_README.md  app.json  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: build-android-apk.yml  build-android.yml  expo-build-apk.yml  local-android-build.yml  simple-android-build.yml
android/: build.gradle  build.gradle.backup  build.gradle.new  build.gradle.new2  gradle.properties  gradlew.bat  local.properties  settings.gradle  settings.gradle.backup  settings.gradle.new  settings.gradle.new2
android/app/: CMakeLists.txt  build.gradle  build.gradle.backup  build.gradle.new  build.gradle.new2
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.html
android/app/src/main/java/com/liveanchor/: MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: main_menu.xml
android/app/src/main/res/values/: strings.xml  styles.xml
minimal-apk/: app.json  package-lock.json  package.json
src/: App.js
src/api/: authApi.ts  http.ts  liveApi.ts
src/components/: LiveVideoView.tsx  ViewerCard.tsx  ViewerModal.tsx
src/config/: agoraConfig.ts
src/navigation/: AppNavigator.tsx
src/screens/Auth/: LoginScreen.tsx
src/screens/Live/: EndSummaryScreen.tsx  LiveRoomScreen.tsx  PreliveScreen.tsx
src/services/: agoraService.ts  liveBootstrap.ts
src/store/: liveStore.ts  userStore.ts
